--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,38 +28,44 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We deal in selling domestic and imported cars at reasonable prices.
       </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+        <div class="card" style="width: 30%;">
+          <img class="card-img-top" src="/static/person.png" alt="Operations Lead">
+          <div class="card-body">
+            <p class="title">Operations Lead</p>
+            <p>Dealer Network Management</p>
+            <p class="card-text">
+              Oversees dealership operations across multiple states, ensuring consistent customer experience, pricing transparency, and operational excellence.
+            </p>
+            <p>operations@test.com</p>
+          </div>
         </div>
-      </div>
-
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+      
+        <div class="card" style="width: 30%;">
+          <img class="card-img-top" src="/static/person.png" alt="Customer Experience Manager">
+          <div class="card-body">
+            <p class="title">Customer Experience Manager</p>
+            <p>Customer Relations & Reviews</p>
+            <p class="card-text">
+              Focuses on improving customer trust by managing reviews, feedback analysis, and ensuring accurate dealership information.
+            </p>
+            <p>support@test.com</p>
+          </div>
         </div>
-      </div>
-
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+      
+        <div class="card" style="width: 30%;">
+          <img class="card-img-top" src="/static/person.png" alt="Technology Lead">
+          <div class="card-body">
+            <p class="title">Technology Lead</p>
+            <p>Platform & Data Services</p>
+            <p class="card-text">
+              Leads platform development, API integrations, and data-driven services that power real-time dealer pricing and reviews.
+            </p>
+            <p>tech@test.com</p>
+          </div>
         </div>
-      </div>
     </div>
     </div>
     </div>
