--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -35,7 +35,7 @@
 
 <!-- Page Banner -->
 <div class="banner">
-  <h2 class="small_header">Contact CheckNBuy</h2>
+  <h2 class="small_header">Contact Test Inc</h2>
   <p class="details">
     Have questions about dealerships, pricing, or reviews?  
     Our team is here to help you make informed car-buying decisions.
